--- a/manual_prices/oaklight-load-balancer.yaml
+++ b/manual_prices/oaklight-load-balancer.yaml
@@ -43,6 +43,9 @@ models:
     deepseek-prover-v2:
       input: 4 rmb / M
       output: 16 rmb / M
+    deepseek-v3.1:
+      input: 4 rmb / M
+      output: 12 rmb / M
     deepseek-v3-free:
       input: 0
       output: 0
@@ -156,6 +159,9 @@ models:
     deepseek-r1-deepseek:
       input: 4 rmb / M
       output: 16 rmb / M
+    deepseek-v3.1-deepseek:
+      input: 4 rmb / M
+      output: 12 rmb / M
 
   字节火山引擎:
     # deepseek @ 字节火山引擎
@@ -163,22 +169,19 @@ models:
       aliases:
         - deepseek-v3-241226
         - deepseek-v3-250324
-      input: 0.002 rmb / K
-      output: 0.008 rmb / K
+      input: 2 rmb / M
+      output: 8 rmb / M
     deepseek-r1-volcengine:
       aliases:
         - deepseek-r1-250120
         - deepseek-r1-250528
-      input: 0.004 rmb / K
-      output: 0.016 rmb / K
-    deepseek-r1-distill-qwen-7b-volcengine:
-      aliases: deepseek-r1-distill-qwen-7b-250120
-      input: 0.0006 rmb / K
-      output: 0.0024 rmb / K
-    deepseek-r1-distill-qwen-32b-volcengine:
-      aliases: deepseek-r1-distill-qwen-32b-250120
-      input: 0.0015 rmb / K
-      output: 0.006 rmb / K
+      input: 4 rmb / M
+      output: 16 rmb / M
+    deepseek-v3.1-volcengine:
+      aliases:
+        - deepseek-v3-1-250821
+      input: 4 rmb / M
+      output: 12 rmb / M
 
   阿里云百炼:
     # deepseek @ 阿里云百炼
@@ -192,14 +195,6 @@ models:
       aliases: deepseek-r1-distill-qwen-7b
       input: 0.0005 rmb / K
       output: 0.001 rmb / K
-    deepseek-r1-distill-qwen-32b-aliyun:
-      aliases: deepseek-r1-distill-qwen-32b
-      input: 0.002 rmb / K
-      output: 0.006 rmb / K
-    deepseek-r1-distill-qwen-1.5b-aliyun:
-      aliases: deepseek-r1-distill-qwen-1.5b
-      input: 0 rmb / K
-      output: 0 rmb / K
 
   Siliconflow:
     # deepseek @ 硅基流动
@@ -211,12 +206,3 @@ models:
       aliases: Pro/deepseek-ai/DeepSeek-R1, deepseek-ai/DeepSeek-R1
       input: 4 rmb / M
       output: 16 rmb / M
-    deepseek-r1-distill-qwen-7b-siliconflow:
-      input: 0.35 rmb / M
-      output: 0.35 rmb / M
-    deepseek-r1-distill-qwen-32b-siliconflow:
-      input: 1.26 rmb / M
-      output: 1.26 rmb / M
-    deepseek-r1-distill-qwen-1.5b-siliconflow:
-      input: 0 rmb / M
-      output: 0 rmb / M
