✨ feat(pricing): add alias for deepseek-v3.1 model
- add deepseek-v3.1-thinking as alias for deepseek-v3.1
- improve model reference flexibility in pricing config

--- a/manual_prices/oaklight-load-balancer.yaml
+++ b/manual_prices/oaklight-load-balancer.yaml
@@ -44,6 +44,7 @@ models:
       input: 4 rmb / M
       output: 16 rmb / M
     deepseek-v3.1:
+      aliases: deepseek-v3.1-thinking
       input: 4 rmb / M
       output: 12 rmb / M
     deepseek-v3-free:
