✨ feat(manual_prices): add aliases for omni-moderation model
- introduce omni-moderation-latest and omni-moderation-2024-09-26 aliases
- improve compatibility and versioning for moderation model

--- a/manual_prices/OpenAI.yaml
+++ b/manual_prices/OpenAI.yaml
@@ -237,6 +237,9 @@ models:
 
     # moderation
     omni-moderation:
+      aliases:
+        - omni-moderation-latest
+        - omni-moderation-2024-09-26
       input: 0
       output: 0
 
