--- a/manual_prices/Moonshot.yaml
+++ b/manual_prices/Moonshot.yaml
@@ -22,11 +22,21 @@ models:
 
     # kimi-k2
     kimi-k2:
-      aliases: kimi-k2-0711-preview
+      aliases:
+        - kimi-k2-0711-preview
+        - kimi-k2-0905-preview
       input: 4 rmb / M
       output: 16 rmb / M
       extra_ratios:
         - cached_tokens: 1 rmb / M
+
+    kimi-k2-turbo:
+      aliases:
+        - kimi-k2-turbo-preview
+      input: 16 rmb / M
+      output: 64 rmb / M
+      extra_ratios:
+        - cached_tokens: 4 rmb / M
 
     # v1
     moonshot-v1-8k:
