✨ feat(manual_prices): add qwen3-next series pricing
- introduce qwen3-next and qwen3-next-thinking models
- set input/output prices and extra reasoning_tokens ratio for new models

--- a/manual_prices/阿里云百炼.yaml
+++ b/manual_prices/阿里云百炼.yaml
@@ -182,6 +182,22 @@ models:
       input: 0
       output: 0
 
+    # qwen3 series
+    # qwen3-next
+    qwen3-next:
+      aliases:
+        - qwen3-next-80b-a3b-instruct
+      input: 0.001 rmb / K
+      output: 0.004 rmb / K
+      extra_ratios:
+        - reasoning_tokens: 0.01 rmb / K
+    qwen3-next-thinking:
+      aliases:
+        - qwen3-next-80b-a3b-thinking
+      input: 0.001 rmb / K
+      output: 0.004 rmb / K
+      extra_ratios:
+        - reasoning_tokens: 0.01 rmb / K
     # qwen3
     qwen3-235b-a22b:
       aliases:
