✨ feat(oaklight-load-balancer): add aliases for deepseek-v3.1
- add terminus and terminus-thinking aliases for deepseek-v3.1

--- a/manual_prices/oaklight-load-balancer.yaml
+++ b/manual_prices/oaklight-load-balancer.yaml
@@ -44,7 +44,10 @@ models:
       input: 4 rmb / M
       output: 16 rmb / M
     deepseek-v3.1:
-      aliases: deepseek-v3.1-thinking
+      aliases: 
+        - deepseek-v3.1-thinking
+        - deepseek-v3.1-terminus
+        - deepseek-v3.1-terminus-thinking
       input: 4 rmb / M
       output: 12 rmb / M
     deepseek-v3-free:
