✨ feat(xAI): add grok-4-fast model pricing and aliases
- introduce grok-4-fast with input/output rates
- add aliases for grok-4-fast variants
- include cached_tokens extra ratio for grok-4-fast

--- a/manual_prices/xAI.yaml
+++ b/manual_prices/xAI.yaml
@@ -1,5 +1,14 @@
 models:
   xAI:
+    grok-4-fast:
+      aliases:
+        - grok-4-fast-reasoning
+        - grok-4-fast-non-reasoning
+      input: 0.2 usd / M
+      output: 0.5 usd / M
+      extra_ratios:
+        - cached_tokens: 0.05 usd / M
+
     grok-4:
       aliases:
         - grok-4-0709
