✨ feat(manual_prices): add doubao-seed-1-6-vision model pricing
- introduce doubao-seed-1-6-vision* with defined input/output prices

♻️ refactor(manual_prices): remove extra_ratios for cached tokens

- eliminate extra_ratios entries to simplify pricing structure

--- a/manual_prices/字节火山引擎.yaml
+++ b/manual_prices/字节火山引擎.yaml
@@ -7,8 +7,6 @@ models:
         - doubao-seed-1-6-thinking*
       input: 1.2 rmb / M # 取32k～128k价格，最为常见
       output: 16 rmb /M # 取32k～128k价格，最为常见
-      extra_ratios:
-        - cached_tokens: 0.1
 
     doubao-seed-1.6: # function call enabled
       aliases:
@@ -17,16 +15,19 @@ models:
         - doubao-seed-1-6-250615
       input: 1.2 rmb / M # 取32k～128k价格，最为常见
       output: 16 rmb /M # 取32k～128k价格，最为常见
-      extra_ratios:
-        - cached_tokens: 0.1
 
     doubao-seed-1.6-flash*: # function call enabled
       aliases:
         - doubao-seed-1-6-flash*
       input: 0.3 rmb / M # 取32k～128k价格，最为常见
       output: 3 rmb /M # 取32k～128k价格，最为常见
-      extra_ratios:
-        - cached_tokens: 0.1
+
+    doubao-seed-1-6-vision*:
+      aliases:
+        - doubao-seed-1.6-vision
+        - doubao-seed-1-6-vision-250815
+      input: 1.2 rmb / M
+      output: 16 rmb / M
 
     doubao-1.5-thinking-pro*: # function call enabled
       aliases:
