🔧 chore(pricing): rename 字节火山引擎 to 字节火山
- update provider name for consistency across files
- rename YAML and JSON fields referencing 字节火山引擎
- align comments and aliases with new naming convention

--- a/manual_prices/oaklight-load-balancer.yaml
+++ b/manual_prices/oaklight-load-balancer.yaml
@@ -167,8 +167,8 @@ models:
       input: 4 rmb / M
       output: 12 rmb / M
 
-  字节火山引擎:
-    # deepseek @ 字节火山引擎
+  字节火山:
+    # deepseek @ 字节火山
     deepseek-v3-volcengine:
       aliases:
         - deepseek-v3-241226
