✨ feat(manual_prices): add doubao-seed-code pricing
- introduce doubao-seed-code* model with input/output prices
- include cached_tokens extra ratio for more pricing options

--- a/manual_prices/字节火山.yaml
+++ b/manual_prices/字节火山.yaml
@@ -33,6 +33,14 @@ models:
       input: 1.2 rmb / M
       output: 16 rmb / M
 
+    doubao-seed-code*:
+      aliases:
+        - doubao-seed-code-preview*
+      input: 1.4 rmb / M
+      output: 12 rmb / M
+      extra_ratios:
+        - cached_tokens: 0.24 rmb / M
+
     doubao-1.5-thinking-pro*: # function call enabled
       aliases:
         - doubao-1-5-thinking-pro*
