📝 docs(mistral): add pricing reference link
- include official pricing documentation link
- add comment clarifying model pricing source

--- a/manual_prices/Mistral.yaml
+++ b/manual_prices/Mistral.yaml
@@ -1,5 +1,6 @@
 models:
   Mistral:
+    # model pricing: https://mistral.ai/pricing#api-pricing
     # premier models
     mistral-medium*:
       input: 0.4 usd / M
