--- a/manual_prices/Deepseek.yaml
+++ b/manual_prices/Deepseek.yaml
@@ -3,11 +3,17 @@ models:
     # 模型定价：https://api-docs.deepseek.com/zh-cn/quick_start/pricing/
 
     deepseek-chat:
+      aliases:
+        - deepseek-v3.2
+        - deepseek-v3.2-exp
       input: 2 rmb / M
       output: 3 rmb / M
       extra_ratios:
         - cached_tokens: 0.2 rmb / M
     deepseek-reasoner:
+      aliases:
+        - deepseek-v3.2-thinking
+        - deepseek-v3.2-exp-thinking
       input: 2 rmb / M
       output: 3 rmb / M
       extra_ratios:
