--- a/manual_prices/MiniMax.yaml
+++ b/manual_prices/MiniMax.yaml
@@ -2,5 +2,7 @@ models:
   MiniMax:
     # https://platform.minimaxi.com/document/Price?key=66701c7e1d57f38758d5818c
     MiniMax-M2:
+      aliases:
+        - MiniMax-M2-Stable
       input: 2.1 rmb / M # 取32k-128k的价格，最为常用
       output: 8.4 rmb / M # 取32k-128k的价格，最为常用
