📝 docs(pricing): add grok-4.1-fast model pricing
- include grok-4.1-fast model with aliases grok-4-1-fast-reasoning and grok-4-1-fast-non-reasoning

--- a/manual_prices/xAI.yaml
+++ b/manual_prices/xAI.yaml
@@ -1,6 +1,16 @@
 models:
   xAI:
     # model pricing: https://docs.x.ai/docs/models
+
+    grok-4.1-fast:
+      aliases:
+        - grok-4-1-fast-reasoning
+        - grok-4-1-fast-non-reasoning
+      input: 0.2 usd / M
+      output: 0.5 usd / M
+      extra_ratios:
+        - cached_tokens: 0.05 usd / M
+
     grok-4-fast:
       aliases:
         - grok-4-fast-reasoning
